@@ -548,10 +548,12 @@
 	  no longer have to be the same.
 	* Add a loop device that converts a file into a block device.
 	* Each NSH command can not be disabled through a configuration setting. All of these
-          settings make the configuration of NSH potentially complex but also allow it to squeeze
-          into very small memory footprints.
+	 settings make the configuration of NSH potentially complex but also allow it to squeeze
+	  into very small memory footprints.
 	* Added a block to character (BCH) driver.  This is kind of the reverse of the loop
 	  device; it allows you access a block device like a character device.
 	* Added strcasecmp() and strncasecmp()
 	* NSH: Added the 'dd' command
 	* NSH: Added the 'losetup' command
+	* Fixed a FAT bug:  After recent changes, it would mount a (invalid) FAT file system
+	  even if the medium is not formatted!
